--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "nanoid": "^5.0.6",
     "nodemailer": "^6.9.10",
     "nodemon": "^3.1.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
