--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "e": "^0.2.33",
     "expess": "^0.0.1-security",
