--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.6",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.10",
     "nodemon": "^3.1.0",
     "slugify": "^1.6.6",
