--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.6",
