--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "e": "^0.2.33",
     "expess": "^0.0.1-security",
